--- a/Python_Final_Project_30.05.22/login_python.ui
+++ b/Python_Final_Project_30.05.22/login_python.ui
@@ -33,63 +33,68 @@
     <string>Giriş Yap</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QLabel" name="kullanici_adi">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>70</y>
-     <width>331</width>
-     <height>111</height>
+     <x>72</x>
+     <y>72</y>
+     <width>111</width>
+     <height>21</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QLabel" name="kullanici_adi">
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>Kullanıcı Adı </string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="sifre">
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>Şifre</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QLineEdit" name="txt_kullanici_adi"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="txt_sifre">
-        <property name="echoMode">
-         <enum>QLineEdit::Password</enum>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-   </layout>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Kullanıcı Adı </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="sifre">
+   <property name="geometry">
+    <rect>
+     <x>72</x>
+     <y>100</y>
+     <width>40</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Şifre</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txt_kullanici_adi">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>71</y>
+     <width>137</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="txt_sifre">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>100</y>
+     <width>137</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
  </widget>
  <resources/>
